Added new classes Added new properties Updated codebuild file Renamed existing classes